--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,4 @@
 PORT = 3000
 MONGO_URI = mongodb+srv://sharon1234:sharon1234@cluster0.af2wc.mongodb.net/storybooks?retryWrites=true&w=majority
+GOOGLE_CLIENT_ID = 1038589175880-ukicel4kpismdhfiiqhecgt3kmrlpg3f.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
